<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1"    >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/team_1"
               android:layout_marginLeft="30dp"
               android:layout_marginTop="30dp"
               android:textSize="20sp"
               android:textColor="#000000" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="50sp"
               android:layout_marginLeft="40dp"
               android:layout_marginTop="20dp"
               android:textColor="#000000"
               android:id="@+id/scoreTeamA"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:textColor="#FF0000"
                android:id="@+id/wicketTeamA"/>
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="40dp"
               android:layout_marginLeft="30dp"
               android:text="@string/one"
               android:textSize="20sp"
               android:background="#A9A9A9"
               android:onClick="one_a"/>
            <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="40dp"
               android:layout_marginLeft="30dp"
               android:text="@string/four"
               android:textSize="20sp"
               android:background="#A9A9A9"
               android:onClick="four_a"/>
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="40dp"
               android:layout_marginLeft="30dp"
               android:text="@string/six"
               android:textSize="20sp"
               android:background="#A9A9A9"
               android:onClick="six_a"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/out"
                android:textSize="20sp"
                android:textColor="#FF0000"
                android:onClick="out_a"/>
            </LinearLayout>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="#A9A9A9" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/team_2"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/scoreTeamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#000000"
                    android:textSize="50sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#FF0000"
                    android:id="@+id/wicketTeamB"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:background="#A9A9A9"
                    android:onClick="one_b"
                    android:text="@string/one"
                    android:textSize="20sp" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:background="#A9A9A9"
                    android:onClick="four_b"
                    android:text="@string/four"
                    android:textSize="20sp" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:background="#A9A9A9"
                    android:onClick="six_b"
                    android:text="@string/six"
                    android:textSize="20sp" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/out"
                    android:textSize="20sp"
                    android:textColor="#FF0000"
                    android:onClick="out_b"/>
            </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:text="@string/reset"
                android:textSize="20sp"
                android:background="#A9A9A9"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:onClick="reset"
                android:layout_marginTop="60dp"/>
            </LinearLayout>
            </ScrollView>